  Entity.initializeValue() removed, see above
  ValueMap.handleSetAs() removed, was overridden in EntityImpl only to copy the cached toString value from the source entity, not worth the complexity
  CriteriaProvider removed, practically unused
  ValueChangeEvent.valueOwner property removed, fixing a cyclical dependency
  EntityTableCellRenderer, minor refactoring
  EntityLookupField, duplicate code refactored into UiUtil.prepareScrollPanelDialog()
  Messages, moved static initializer with UIManager dependency to FrameworkMessages
  FrameworkMessages, removed getDefaultConfirm...() methods
  H2Database.createEmbeddedH2Database() no longer static, dynamically loads RunScript tool to get rid of compile time dependency to H2 codebase
  H2Database refactored a bit
  AbstractDatabase.getAuthenticationInfo() now allows empty passwords
  Util.nullOrEmpty() now returns true if the no arguments are provided
  H2Database, bug fixed, did not initialize properly
  EntityConnectionImpl.lockAndCheckForUpdate() now respects contract and throws an exception if a record has been deleted, tested
  EntityConnectionImpl.EntityResultPacker, minor refactoring
  Entities, minor refactoring in StringProvider classes
  LoadTestModelTest main scenario no longer uses Random
  LocalEntityConnectionProvider, now uses a proxy for logging method calls
  EntityConnectionLogger added
  ConnectionPools now manages available connection pools
  EntityConnectionServer now handles initializing connection pools
  RemoteEntityConnectionImpl, refactored a bit
  RemoteEntityConnectionImpl, synchronized public methods
  MethodLogger, minor refactoring
  LogEntry.exitTime field added, some refactoring
  EntityTableModel.setForeignKeySearchValues(entityID, values) removed
  DefaultEntityModel.detailModelForeignKeys map now contains the actual foreign key property as value, instead of the propertyID
  DefaultEntityModel.setDetailModelForeignKey() fetches (and thereby validates) the actual foreign key