@@ -14,9 +14,10 @@ import java.util.List;
 public interface ResultPacker<T> {
 
   /**
-   * Iterates through the given ResultSet, packing its contents into a List
-   * @param resultSet the object containing the query result to process
-   * @param fetchCount the number of records to fetch from the result set,
+   * Iterates through the given ResultSet, packing its contents into a List in the order they appear.
+   * This method does not close or modify the ResultSet in any way.
+   * @param resultSet the ResultSet instance containing the query result to process
+   * @param fetchCount the maximum number of records to fetch from the result set,
    * a negative value means all should be fetched.
    * @return a List containing the data from the query result
    * @throws SQLException thrown if anything goes wrong during the packing
